--- a/src/signup.html
+++ b/src/signup.html
@@ -6,98 +6,129 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel = "stylesheet" href = "../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <link rel = "stylesheet" href = "../node_modules/sweetalert2/dist/sweetalert2.min.css" />    
-<title>Sign up || SIS</title>
+<title>Login || SIS</title>
 <style>
-  :root{
-    --font-style: 'Poppins', sans-serif;
-    --other-font: 'Roboto'. sans-serif;
-    --primary-100:#1F3A5F; /*main-primary*/
-    --primary-200:#4d648d;
-    --primary-300:#acc2ef;
-    --accent-100:#3D5A80;/* accent */
-    --accent-200:#cee8ff;
-    --text-100:#FFFFFF;
-    --text-200:#e0e0e0;
-    --bg-100:#0F1C2E; /*main background */
-    --bg-200:#1f2b3e;
-    --bg-300:#374357;
-}
-*{
+  *{
     margin: 0;
     padding: 0;
-    box-sizing: 0;
-}
-body{
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items:center;
-}
-@media screen and (max-width: 768px) {
-    #title {
-      display: none;
-    }
-    #form-container {
-      border-radius: 10px;
-      height: 690px;
-    }
-    #login-btn {
-      display: flex;
-      flex-direction: column;
-    }
-    #signuptext {
-    display: none;
-      text-wrap: nowrap;
-    }
-}
+    box-sizing: border-box;
+  }
+  body{
+    width: 100%;
+    height: 100vh;
+    background-color: #f6f5f5;
+  }
+  .navbar{
+    padding: 8px 12px;
+    background-color: #2c3583;
+  }
+  .main-logo{
+    padding: 4px;
+    width: 65px;
+    height: 65px;
+  }
+  .logo-text{
+    padding: 8px 4px;
+    line-height: 1.5px;
+    letter-spacing: -1px;
+  }
+  .title-text{
+    margin: 0px;
+    padding:0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    color: #f6f5f5;
+    font-size: 20px;
+  }
+  .title-sub-text{
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 300;
+    color: #f6f5f5;
+    font-size: 18px;
+  }
 </style>
-  </head>
-  <body style = "background-color: var(--primary-100);">
-    <!-- login form -->
-   <div class = "container d-flex align-items-center justify-content-center">
-      <div class = "row d-flex flex-row justify-content-center p-2">
-        <div id = "title" class="bg-danger col-xl-6 p-5 shadow-lg rounded-start-1 d-xl-flex flex-xl-column justify-content-xl-center d-sm-none" >
-          <h1 class ="display-2 px-3 text-white" style = "font-family: var(--font-style); font-weight: 600; color: var(--bg-100);">Student Information System</h1>
-          <h1 class ="fs-5 px-3 text-white" style = "font-family: var(--font-style); font-weight: 400; color: var(--bg-100);">A system project for the CICS Dept.</h1>
-        </div>
-
-        <div id = "form-container" class="col-xl-5 rounded-end-xl-1 bg-secondary-subtle shadow-lg p-1 d-xl-flex flex-xl-column align-xl-items-center justify-content-xl-center" style = "height: 550px;">
-          <h1 class = "text-center fs-1 p-1">Sign-up</h1>
-          <form class = "row d-flex justify-content-xl-center p-3">
-            <div class = "col-xl-5 form-group p-2">
-                <label for = "email" class = "form-label fs-5">First Name</label>
-                <input id = "firstname" type = "text" name= "firstname" class = "form-control form-control-md" placeholder = "enter first name...">
-              </div>
-              <div class = "col-xl-5 form-group p-2">
-                <label for = "firstname" class = "form-label fs-5">Last Name</label>
-                <input id = "lastname" type = "text" name= "lastname" class = "form-control form-control-md" placeholder = "enter last name...">
-              </div>
-            <div class = "col-xl-10 form-group p-2">
-              <label for = "email" class = "form-label fs-5">Email</label>
-              <input id = "emailadd" type = "email" name= "email" class = "form-control form-control-md" placeholder = "enter email address...">
-            </div>
-            <div class = "col-xl-10 form-group p-2">
-              <label for = "password" class = "form-label fs-5">Password</label>
-              <input id = "password" type = "password" name= "password" class = "form-control form-control-md" placeholder = "enter Password...">
-            </div>
-
-            <div id = "login-btn" class ="col-xl-10 form-group p-2 d-flex flex-xl-column justify-content-xl-center flex-md-column">
-              <button id = "submit" class = "btn btn-lg px-1 py-1 rounded-3 fs-5 text-center align-items-xl-center" style = "background-color: var(--primary-100); color:var(--text-200);">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-box-arrow-left me-2" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0z"/>
-                    <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708z"/>
-                  </svg>Sign-up</button>
-                <span id = "signuptext" class = "fs-5 p-3 d-md-none d-xl-block " style = "font-family: var(--font-style); color: var(--bg-100); font-weight: 300;">Already have an account? <a href = "index.html">Login</a></span>
-            </div>
-          </form>
-        </div>
+</head>
+<body>
+  <navbar class = "navbar navbar-xl-expand">
+    <div class = "container-fluid d-flex flex-row justify-content-start align-items-center gap-1">
+      <img class = "main-logo rounded-circle" src = "../assets/cicslogo.jpg" alt = "cics logo" />
+      <div class = "logo-text d-flex flex-column align-items-start">
+        <h2 class = "title-text">LYCEUM OF APARRI</h2>
+        <h3 class = "title-sub-text">CICS Department</h3>
       </div>
+    </div>
+  </navbar>
+  <div class = "container-xl my-auto py-3">
+        <h1 class = "display-6 py-2 text-center font-medium" style="font-family: Arial, Helvetica, sans-serif; color: #6f6b6c;">Student Information System</h1>
+        <div class="row d-flex align-content-center justify-content-center gap-5">
+          <div class = "col-xl-6 py-2 px-3">
+            <img src = "../assets/Datareport.svg" alt = "side image">
+          </div>
+          
+          <div class = "col-xl-5 py-5 px-4 bg-light-subtle rounded-3" style = "box-shadow: 0px 5px 10px 0px lightgray;">
+            <h1 class = "login m-0 pt-3 pb-4 px-2 text-center" style = "font-family: Arial, Helvetica, sans-serif; font-size: 36px; color: #464445;">REGISTER</h1>
 
-   </div>
-    <script src="validation.js"></script>
+            <form class = "form-group" action = "../server_side/login.php" method = "post">
+              <h4 class="m-0 py-2 font-medium" style = "font-family: 'Merriweather', serif; font-size: 18px; ">Account Details</h4>
+              <div class = "account mb-2 d-flex flex-row ">
+                <div class="row">
+                  <div class = "col-6 py-2">
+                    <div class = "user mb-2">
+                      <label for = "first n" class = "form-label py-2 m-0">Firstname</label>
+                    <div class = "input-group">
+                        <span class="input-group-text bg-white border-end border-end-0" id="inputGroup-sizing-sm"><i class="bi bi-person-fill"></i></span>
+                        <input type = "text" class = "form-control form-control-md form-control-black-subtle" aria-describedby="inputGroup-sizing-sm" placeholder="enter firstname...">
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class = "col-6 py-2">
+                    <div class = "user mb-2">
+                      <label for = "last n" class = "form-label py-2 m-0">Lastname</label>
+                      <div class = "input-group">
+                        <span class="input-group-text bg-white" id="inputGroup-sizing-sm"><i class="bi bi-person-fill"></i></span>
+                        <input type = "text" class = "form-control form-control-md form-control-black-subtle" aria-describedby="inputGroup-sizing-sm"placeholder = "enter lastname...">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <h4 class="m-0 py-2 font-medium" style = "font-family: 'Merriweather', serif; font-size: 18px; ">Login Details</h4>
+              <div class = "user mb-2">
+                <label for = "Email" class = "form-label py-2 m-0">Email</label>
+                <div class = "input-group">
+                  <span class="input-group-text bg-white" id="inputGroup-sizing-sm"><i class="bi bi-envelope-fill"></i></span>
+                  <input type = "text" class = "form-control form-control-md form-control-black-subtle" aria-describedby="inputGroup-sizing-sm"placeholder = "enter email...">
+                </div>
+              </div>
+
+              <div class = "pass mb-2">
+                <label for = "password" class = "form-label py-2 m-0">Password</label>
+                <div class = "input-group">
+                  <span class="input-group-text bg-white" id="inputGroup-sizing-sm"><i class="bi bi-key-fill"></i></span>
+                  <input type = "text" class = "form-control form-control-md form-control-black-subtle" aria-describedby="inputGroup-sizing-sm" placeholder="enter password...">
+                </div>
+              </div>
+
+              <div class = "submit py-2 d-flex flex-column">
+                <button class = "btn btn-lg btn-primary font-light rounded-3" style = "font-size: 18px; font-family: Arial, Helvetica, sans-serif;"type = "submit">Sign UP</button>
+
+                <h5 class = "py-3 m-0 text-center" style = "font-family: 'Merriweather', serif; font-size: 14px; ">Have an Account ? <a href = "index.html">LOGIN</a></h5>
+              </div>
+            </form>
+          </div>
+        </div>
+  </div>
+    
+  
+  
+  <script type="module" src="/main.js"></script>
     <script src = '../node_modules/sweetalert2/dist/sweetalert2.min.js'></script>
     <script src= "../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
